added some additional packages and updates